first part pandas

--- a/11_exercises.ipynb
+++ b/11_exercises.ipynb
@@ -2172,6 +2172,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### A puzzle game (&#10034;&#10034;&#10034; - &#10034;&#10034;&#10034;&#10034;&#10034;)\n",
+    "\n",
+    "Especially older people will probably know the windows Minesweeper game. It looks like this:  \n",
+    "```{image} pics/minesweeper.jpg\n",
+    ":alt: mine sweeper\n",
+    ":width: 250px\n",
+    ":align: center\n",
+    "```\n",
+    "\n",
+    "I have programmed a slightly different version of it using Python and a GUI framework called TKinter:  \n",
+    "\n",
+    "```{image} pics/mine_hunter.png\n",
+    ":alt: mine hunter\n",
+    ":width: 300px\n",
+    ":align: center\n",
+    "```\n",
+    "\n",
+    "The app code is in the repo of this book [here](https://github.com/MichielNoback/python_intro) (in folder `gui_demo`).  \n",
+    "You can download that entire repository as zip archive (button `Code`).  \n",
+    "\n",
+    "Study the code, and read or watch some tutorials.  \n",
+    "Next, head over to https://www.puzzle-tents.com/ and choose a game you would like to re-create. Implement that game using python and tkinter."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Create a Game of Life simulation app (&#10034;&#10034;&#10034;&#10034;&#10034;)\n",
     "\n",
     "The [Game of Life](https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life) or Conway's Game of Life is a simulation of a simple growth experiment. It follows a few simple rules deciding whether a cell (an element in a 2D grid) will live or die. The challenge here is to visualize the simulation so you will need to work with a Graphical User Interface (GUI) toolkit. There are several libraries for that purpose available in Python but I suggest you use TkInter, PyQt5 or PySimpleGUI - see [here](https://www.activestate.com/blog/top-10-python-gui-frameworks-compared/). \n"
@@ -2180,9 +2209,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "education",
    "language": "python",
-   "name": "python3"
+   "name": "education"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2194,7 +2223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
