some more exercises

--- a/11_exercises.ipynb
+++ b/11_exercises.ipynb
@@ -420,10 +420,7 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### Challenge\n",
-    "Can you already take this to the next level and put the solution in a function?"
-   ]
+   "source": []
   },
   {
    "attachments": {},
@@ -676,7 +673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Choosing between lists and tuples\n",
+    "### Choosing lists or tuples\n",
     "\n",
     "In essence, a tuple is a list that cannot be changed after it has been created. For the following use cases, choose the most appropriate of these two and implement the case.\n",
     "\n",
@@ -691,7 +688,7 @@
     "```\n",
     "</details>\n",
     "\n",
-    "\n"
+    "<br>\n"
    ]
   },
   {
@@ -699,8 +696,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) A chess board has 64 fields, indicated by letters for the 8 columns (a-h) and numbers for the rows (1-8). So A1 is the lowerleft field and H8 the upper right one. A chess move consists of a piece (e.g. pawn, knight, queen etc) going from a field of origin (e.g. B2) to a field of destination (e.g. B4). \n",
-    "Create a collection storing a moves in a chess game. \n",
+    "b) A chess board has 64 fields, indicated by letters for the 8 columns (a-h) and numbers for the rows (1-8). See below.  \n",
+    "![chess board](pics/chess_board.png)  \n",
+    "\n",
+    "So 'a1' is the lowerleft field and 'h8' the upper right one. A chess move consists of a piece (e.g. pawn, knight, queen etc) going from a field of origin (e.g. b2) to a field of destination (e.g. b4). The chess pieces are shown below.    \n",
+    "![Chess pieces](pics/chess_pieces.jpeg)  \n",
+    "\n",
+    "Create a collection storing moves of a chess game. \n",
     "Demonstrate its use by creating and storing a few moves.\n",
     "\n",
     "<details>\n",
@@ -723,7 +725,9 @@
     "\n",
     "print(moves)\n",
     "```\n",
-    "</details>\n"
+    "</details>\n",
+    "\n",
+    "<br>"
    ]
   },
   {
@@ -748,7 +752,9 @@
     "               ['O', 'X', ' '])\n",
     "pp.pprint(tic_tac_toe)\n",
     "```\n",
-    "</details>\n"
+    "</details>\n",
+    "\n",
+    "<br>"
    ]
   },
   {
@@ -1093,6 +1099,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Looping with `while`\n",
+    "\n",
+    "Ask the user a for username of at least 6 characters long, consisting of only alphabet characters or number. Repeat the question as long as there is no correct username provided. If the input is correct, print \"You are registered as &lt;USERNAME&gt;!\" and exit the loop. If the input is empty, print \"Registration cancelled.\" and exit as well.  \n",
+    "(NB this is not nice to do in Visual Studio Code)\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
+    "  This is a typical use case for `while True:`.  \n",
+    "\n",
+    "</details>  \n",
+    "  <br>\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "\n",
+    "```python\n",
+    "while True:\n",
+    "    username = input(\"Please enter a username\")\n",
+    "    print(f'You entered \"{username}\"')\n",
+    "    if len(username) == 0:\n",
+    "        print(\"Registration cancelled\")\n",
+    "        break\n",
+    "    if len(username) > 6 and username.isalnum():\n",
+    "        print(f'You are registered as \"{username}\"')\n",
+    "        break\n",
+    "    else:\n",
+    "        print(f'Username incorrect: \"{username}\"; should be at least 6 characters of only letters and digits')\n",
+    "```\n",
+    "\n",
+    "</details>\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1107,7 +1148,7 @@
    "source": [
     "### Refactor to use functions\n",
     "\n",
-    "Refactor the above assignment (03.3) to use functions for each sub-assignment. You will end up with at least 4 functions, something like this:\n",
+    "Refactor the assignment \"Looping with `for` (2)\" to use functions for each sub-assignment. You will end up with at least 4 functions, something like this:\n",
     "- `count_sentences(text)`: counts the number of sentences\n",
     "- `count_words(sentence)`: counts the words in a sentence \n",
     "- `process_words(sentence, word_dict)`: Counts the different words in a sentence. If `word_dict` is `None`, create a new one, else use the given dict!\n",
@@ -1115,6 +1156,89 @@
     "\n",
     "You can ignore the fact that this may not be the most efficient way to get all statistics in a single analysis. \n",
     "Feel free to be creative in your refactoring."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unit conversions\n",
+    "\n",
+    "Write a function that can be used to convert units in different temperature scales between each other.  \n",
+    "For instance, temperature in degrees Fahrenheit to Celsius is `°F = (°C * 9/5) + 32`.  \n",
+    "Conversely, `°C = (°F - 32) * 5/9`. And Kelvin to Celsius: `K = C + 273.15`.  \n",
+    "\n",
+    "Your function should take three arguments: the input temp, the origin scale and the destination scale.  \n",
+    "It should print the converted value as well as the input and output types.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DNA translations\n",
+    "\n",
+    "In its most basic form, DNA can be seen as a sequence of 3-letter words (called _codons_), each of which encodes a single amino acid or a stop signal.  \n",
+    "So, this short DNA sequence `ATGCCGGGCTAA` can be translated into Met-Pro-Gly-Stop. Or, in single-letter encoding `MPG*`. For details on this central dogma of molecular biology, see [here](https://atdbio.com/nucleic-acids-book/Transcription-Translation-and-Replication).  \n",
+    "The snippet below generates the DNA codon translation table that can be used to translate DNA into protein.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bases = \"tcag\"\n",
+    "codons = [a + b + c for a in bases for b in bases for c in bases]\n",
+    "amino_acids = 'FFLLSSSSYY**CC*WLLLLPPPPHHQQRRRRIIIMTTTTNNKKSSRRVVVVAAAADDEEGGGG'\n",
+    "codon_table = dict(zip(codons, amino_acids))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is your task to create a function that can translate DNA into protein. The function should receive two arguments: the DNA sequence (`seq`) and the position to start translation at, `start`. This last argument should default to 0 (the first nucleotide).  \n",
+    "Here is a test sequence you can use (parts of):  \n",
+    "```\n",
+    "CATCATGAAATCGCTTGTCGCACTACTGCTGCTTTTAGTCGCTACTTCTGCCTTTGCTGACCAGTATGTAAATGGCTACA\n",
+    "CTAGAAAAGACGGAACTTATGTCAACGGCTATAC\n",
+    "```\n",
+    "\n",
+    "As an optional extra argument you could implement that the function exits and returns the protein sequence when a stop (`*`) is encountered, defaulting on `False`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
+    "  To get hold of a codon, you will need something like `codon = seq[i: i+3]`\n",
+    "\n",
+    "</details>  \n",
+    "  <br>\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "\n",
+    "```python\n",
+    "def translate(seq, start=0, exit_on_stop=False):\n",
+    "    seq = seq.lower().replace('\\n', '')\n",
+    "    peptide = ''\n",
+    "    for i in range(start, len(seq), 3):\n",
+    "        codon = seq[i: i+3]\n",
+    "        amino_acid = codon_table.get(codon, '*') # Default return value when the codon is not three letters\n",
+    "        peptide += amino_acid\n",
+    "\n",
+    "        if amino_acid == '*' and exit_on_stop:\n",
+    "            break\n",
+    "    return peptide\n",
+    "\n",
+    "dna = \"CATCATGAAATCGCTTGTCGCACTACTGCTGCTTTTAGTCGCTACTTCTGCCTTTGCTGACCAGTATGTAAATGGCTACACTAGAAAAGACGGAACTTATGTCAACGGCTATAC\"\n",
+    "translate(dna, start = 2, exit_on_stop=False)\n",
+    "```\n",
+    "</details>\n"
    ]
   },
   {
