--- a/00_jupyter.ipynb
+++ b/00_jupyter.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Jupyter notebooks and Markdown\n",
+    "# Jupyter notebook and Markdown\n",
     "\n",
     "A notebook is an electronic  document used for **literate programming**. In literate programming, text (usually in the form of **Markdown**), code, and code output (both textual and graphical) are combined in a single document which can often also be exported to html, pdf or Word format.\n",
     "\n",
